--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -4,5 +4,5 @@
     <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
   </ul>
 
-  <p class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a>.</p>
+  <p class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a></p>
 </footer>
