Always display Global Header in one line

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,7 +1,11 @@
 // Site Navigation
 .site-navigation {
-  font-size: rem($ratio-text-small);
+  font-size: rem($ratio-text-tiny);
+  line-height: $line-height-logo;
+  position: absolute;
+  right: $padding-side-centering;
   text-transform: uppercase;
+  top: 0;
 
   ul {
     padding-left: 0;
@@ -9,7 +13,7 @@
 
   li {
     display: table-cell;
-    padding-right: $padding-side-centering;
+    padding-left: $width-gap-tiny;
   }
 
   a {
@@ -24,13 +28,16 @@
   }
 
   @media (min-width: $breakpoint-content) {
-    line-height: $line-height-logo;
-    position: absolute;
-    right: 0;
-    top: 0;
+    font-size: rem($ratio-text-small);
 
     li {
-      padding-left: $padding-side-centering;
+      padding-left: $width-gap;
+    }
+  }
+
+  @media (min-width: $breakpoint-full) {
+    li {
+      padding-left: $width-gap-large;
     }
   }
 }
