--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -43,6 +43,7 @@ $column-gap: rem($ratio);
 
 // Main Component
 $width-gap: $column-gap;
+$width-gap-tiny: ($width-gap / pow($ratio, 2));
 $width-gap-small: ($width-gap / 2);
 $width-gap-large: ($width-gap * $ratio);
 
