Remove unused variables

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -5,7 +5,7 @@
 
   font-family: $font-stack-sans-serif;
   font-size: percentage($ratio-text);
-  line-height: $line-height-root;
+  line-height: $line-height-small;
 
   @media (min-width: $breakpoint-content) {
     line-height: $line-height-root-content;
@@ -24,7 +24,7 @@ h1 {
   @extend %heading;
   @extend %link-underline-removal;
 
-  font-size: rem($ratio-text-h1);
+  font-size: rem($ratio-text-huge);
   margin: $margin-gargantuan 0 $margin;
 }
 
@@ -49,8 +49,8 @@ hr {
   box-sizing: content-box;
   clear: both;
   color: $color-dark-light;
-  font-size: rem($ratio-text-hr);
-  height: rem($ratio-text-hr);
+  font-size: rem($ratio-text-huge);
+  height: 1em;
   line-height: 1;
   margin: $margin-large 0;
   text-align: center;
@@ -91,7 +91,7 @@ ul,
 ol {
   @extend %margin;
 
-  padding-left: $indent;
+  padding-left: $padding-left-list;
 
   ul,
   ol {
@@ -167,7 +167,7 @@ main {
 
 // Text-level Semantics
 a {
-  color: $color-fg-link;
+  color: $color-primary;
   text-decoration: underline;
 }
 
