--- a/src/css/class/_decorative-border.scss
+++ b/src/css/class/_decorative-border.scss
@@ -6,6 +6,6 @@
     display: block;
     margin-bottom: $margin-bottom-decorative-border;
     padding-top: $margin-bottom-decorative-border;
-    width: $width-decorative-border;
+    width: ($width-supplement / pow($ratio, 3));
   }
 }
