--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -4,12 +4,14 @@
   padding-left: 0;
 
   li {
+    $p: $width-gap-small;
+
     display: table-cell;
-    padding-right: $padding-right-footlinks-item;
+    padding-right: $p;
 
     &:first-child::after {
       content: "·";
-      margin-left: $padding-right-footlinks-item;
+      margin-left: $p;
     }
 
     &:last-child {
