Equal First Heading top and bottom white spaces

--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -2,21 +2,23 @@
 .first-heading {
   @extend %decorative-border;
 
-  $m: ($margin-large + $height-footing);
+  $m-b: $margin-large;
+  $m-t: ($m-b + $height-footing);
 
   color: $color-dark-light;
   font-size: rem($ratio-text-large);
   font-weight: bolder;
   line-height: $line-height-first-heading;
-  margin-bottom: $m;
-  margin-top: $m;
+  margin-bottom: $m-b;
+  margin-top: $m-t;
 
   @media (min-width: $breakpoint-content) {
-    $m: $margin-huge;
+    $m-b: $margin-huge;
+    $m-t: ($m-b + $height-footing);
 
     font-size: rem($ratio-text-huge);
-    margin-bottom: $m;
-    margin-top: $m;
+    margin-bottom: $m-b;
+    margin-top: $m-t;
   }
 
   @media (min-width: $breakpoint-full) {
