--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -18,7 +18,7 @@
     width: $width-protrusion-full;
 
     p {
-      margin-top: ($height-decorative-border + ($height-first-heading-full - $height-footing) / 2);
+      margin-top: (($height-first-heading-full - $height-footing) / 2);
     }
   }
 }
