--- a/src/css/widget/_pull-quote.scss
+++ b/src/css/widget/_pull-quote.scss
@@ -32,9 +32,12 @@
 
   @media (min-width: $breakpoint-full) {
     float: left;
-    margin-bottom: $margin-tiny;
     margin-left: (- ($width-supplement + $width-gap-large));
     margin-right: $width-gap;
     max-width: ($width-supplement + $width-gap-large + $width-supplement / $ratio);
+
+    p {
+      margin-bottom: $margin-tiny;
+    }
   }
 }
