--- a/src/css/widget/_float.scss
+++ b/src/css/widget/_float.scss
@@ -1,7 +1,7 @@
 // Float
 .float {
   float: right;
-  margin-bottom: rem(($line-height - 1) / 2);
+  margin-bottom: $margin-minimal;
   margin-left: $width-gap-small;
   max-width: percentage(1 / pow($ratio, 2));
 }
