--- a/src/css/widget/_pull-quote.scss
+++ b/src/css/widget/_pull-quote.scss
@@ -37,7 +37,7 @@
     max-width: ($width-supplement + $width-gap-large + $width-supplement / $ratio);
 
     p {
-      margin-bottom: $margin-tiny;
+      margin-bottom: $margin-minimal;
     }
   }
 }
