Add description after First Heading

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -13,6 +13,8 @@
         <section>
           <h1 class="first-heading">{{short_title}}</h1>
 
+          <p>{{description}}$categories::description</p>
+
           <ol class="post-list">
       </?>
 
