--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -9,6 +9,12 @@
       <section>
         <h1 class="first-heading">{{short_title}}</h1>
 
+        <p>{{description}}</p>
+      </section>
+
+      <section id="by-year">
+        <h1>公開年別</h1>
+
         <ol class="flat-list">
           {{#articles}}
             {{#isFirstInYear}}
