--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -9,6 +9,8 @@
       <section>
         <h1 class="first-heading">{{short_title}}</h1>
 
+        <p>{{description}}</p>
+
         <ol class="flat-list">
           <li><a href="#on-2015"><time>2015</time></a></li>
           <li><a href="#on-2014"><time>2014</time></a></li>
