--- a/src/html/links/index.mustache
+++ b/src/html/links/index.mustache
@@ -9,6 +9,8 @@
       <section>
         <h1 class="first-heading">{{short_title}}</h1>
 
+        <p>{{description}}</p>
+
         <ol class="flat-list">
           {{#bookmarks}}
             {{#isFirstInYear}}
