Simplify first sections

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -11,9 +11,7 @@
     <main class="content" role="main">
       <?$categories::enabled eq="1">
         <section>
-          <h1 class="first-heading">{{short_title}}</h1>
-
-          <p>{{description}}$categories::description</p>
+          <h1>$categories::titleについての記事一覧</h1>
 
           <ol class="post-list">
       </?>
