--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content" role="main">
       <section id="website">
-        <h1 class="first-heading">{{short_title}}</h1>
+        <h1 class="first-heading">このウェブサイトについて</h1>
 
         <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録ともう少しかっちりとした文書を、ウェブサイト制作およびプログラミング周りの話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
 
