--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -6,19 +6,13 @@
     {{> global-header}}
 
     <main class="content" role="main">
-      <section>
-        <h1 class="first-heading">{{short_title}}</h1>
-
-        <p>{{description}}</p>
-      </section>
-
       <section id="by-year">
         <h1>公開年別</h1>
 
         <ol class="flat-list">
           {{#articles}}
             {{#isFirstInYear}}
-              <li><a href="#on-{{year}}"><time>{{year}}</time></li>
+              <li><a href="#on-{{year}}"><time>{{year}}</time></a></li>
             {{/isFirstInYear}}
           {{/articles}}
         </ol>
