Keep First Heading white spaces same as heading

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -25,7 +25,7 @@ h1 {
   @extend %link-underline-removal;
 
   font-size: rem($ratio-text-huge);
-  margin: $margin-gargantuan 0 $margin;
+  margin: $margin-top-h1 0 $margin;
 }
 
 article,
