--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -1,26 +1,18 @@
 // First Heading
 .first-heading {
-  $m-b: $margin-large;
-  $m-t: ($m-b + $height-footing);
-
   font-size: rem($ratio-text-large);
   line-height: $line-height-first-heading;
-  margin-bottom: $m-b;
-  margin-top: $m-t;
+  margin-bottom: $margin-top-h1;
+  margin-top: ($margin-top-h1 + $height-footing);
 
   @media (min-width: $breakpoint-content) {
-    $m-b: $margin-huge;
-    $m-t: ($m-b + $height-footing);
-
     font-size: rem($ratio-text-huge);
-    margin-bottom: $m-b;
-    margin-top: $m-t;
   }
 
   @media (min-width: $breakpoint-full) {
-    $m: $margin-gargantuan;
-
     font-size: rem($ratio-text-first-heading-full);
-    margin: $m $width-protrusion-full $m (- ($width-supplement + $width-gap-large));
+    margin-left: (- ($width-supplement + $width-gap-large));
+    margin-right: $width-protrusion-full;
+    margin-top: $margin-top-h1;
   }
 }
