--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -87,6 +87,8 @@ $height-footing: rem($line-height-footing * $ratio-text-footing);
 // Core
 $line-height-root-content: $line-height;
 
+$margin-top-h1: $margin-gargantuan;
+
 $padding-left-blockquote: $width-gap;
 $width-border-blockquote: $width-border-large;
 
