--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -105,5 +105,5 @@ $height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-h
 
 
 // Global Footer
-$margin-top-footlinks: $margin-gargantuan;
-$margin-top-footlinks-full: $margin-enormous;
+$margin-top-byline: $margin-gargantuan;
+$margin-top-byline-full: $margin-enormous;
