--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -1,5 +1,6 @@
-<link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
 <link href="{{canonical}}" rel="canonical">
+<link href="{{feed_url}}" rel="alternate" type="application/rss+xml">
+<link href="{{license_url}}" rel="license">
 
 {{#home}}
   {{#articles}}
