--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -1,9 +1,9 @@
 // Byline
 .byline {
   @extend %decorative-border;
-  @extend %protrusion;
 
   color: $color-dark-light;
+  margin-top: $margin-top-byline;
 
   mark {
     background-color: transparent;
@@ -11,7 +11,7 @@
   }
 
   @media (min-width: $breakpoint-full) {
-    bottom: (- $margin);
-    margin-right: (- ($width-supplement-outer - $width-gap-small));
+    margin-left: (- $width-supplement-outer);
+    margin-top: $margin-top-byline-full;
   }
 }
