--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -2,7 +2,7 @@
 .site-search {
   @extend %search-form;
 
-  $m: ((rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2 - $margin);
+  $m: ($height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2 - $margin);
 
   top: $margin-huge;
 
@@ -30,13 +30,13 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $padding-side-centering;
-    top: ($margin-top-footlinks + $m);
+    top: ($margin-top-byline + $m);
     width: percentage(1 / 2);
     z-index: 1;
   }
 
   @media (min-width: $breakpoint-full) {
-    top: ($margin-top-footlinks-full + $m);
+    top: ($margin-top-byline-full + $m);
     width: percentage(1 / 3);
   }
 }
