Control Site Search top white spaces relatively

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -4,7 +4,7 @@
 
   $m: ($height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2 - $margin);
 
-  top: $margin-huge;
+  top: ($margin-top-byline - $margin);
 
   .query {
     padding-left: $height-search-form-query;
