Don’t use buggy table-cell

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -12,13 +12,12 @@
   }
 
   li {
-    display: table-cell;
+    display: inline;
     padding-left: $width-gap-tiny;
   }
 
   a {
     color: inherit;
-    display: inline-block;
   }
 
   mark {
