Use serif for body, sans serif for heading

--- a/src/css/_debug.scss
+++ b/src/css/_debug.scss
@@ -120,6 +120,10 @@ body::after {
 
 // Fonts
 .font-family-body {
+  font-family: $font-stack-serif;
+}
+
+.font-family-heading {
   font-family: $font-stack-sans-serif;
 }
 
