--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -3,4 +3,6 @@
   @extend %centering;
   @extend %link-underline-removal;
   @extend %positioning-root;
+
+  font-family: $font-stack-sans-serif;
 }
