--- a/src/css/widget/_read-older.scss
+++ b/src/css/widget/_read-older.scss
@@ -12,7 +12,7 @@
     color: $color-dark-light;
     content: "Read older:";
     display: block;
-    font-weight: bolder;
+    font-family: $font-stack-sans-serif;
     line-height: 1;
     margin-bottom: $margin-tiny;
     margin-top: $m;
