--- a/src/css/widget/_share-buttons.scss
+++ b/src/css/widget/_share-buttons.scss
@@ -3,6 +3,8 @@
   @extend %link-underline-removal;
   @extend %protrusion;
 
+  font-family: $font-stack-sans-serif;
+
   ul {
     padding-left: 0;
   }
