--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -3,7 +3,7 @@
   @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @include font-feature-settings("kern" 1, "lnum" 1, "pnum" 1);
 
-  font-family: $font-stack-sans-serif;
+  font-family: $font-stack-serif;
   font-size: percentage($ratio-text);
   line-height: $line-height-small;
 
@@ -24,6 +24,7 @@ h1 {
   @extend %heading;
   @extend %link-underline-removal;
 
+  font-family: $font-stack-sans-serif;
   font-size: rem($ratio-text-huge);
   margin: $margin-top-h1 0 $margin;
 }
@@ -136,6 +137,7 @@ figcaption {
   @extend %protrusion;
 
   color: $color-dark-light;
+  font-family: $font-stack-sans-serif;
 
   blockquote + & {
     border-left: $width-border-blockquote solid $color-border-blockquote;
@@ -172,15 +174,12 @@ a {
 }
 
 em {
-  color: $color-dark-light;
+  font-family: $font-stack-sans-serif;
   font-style: normal;
-  font-weight: bolder;
 }
 
 strong {
-  color: $color-secondary-dark;
-  font-weight: normal;
-  padding: $padding-small;
+  font-weight: bolder;
 }
 
 cite {
@@ -274,6 +273,7 @@ td {
 th {
   @extend %table-cell;
 
+  font-family: $font-stack-sans-serif;
   text-align: left;
 
   thead & {
@@ -283,6 +283,10 @@ th {
 
 
 // Forms
+form {
+  font-family: $font-stack-sans-serif;
+}
+
 :-ms-input-placeholder {
   color: inherit;
   opacity: .54;
