Use same color for Site Search button icon and its border

--- a/src/css/class/_search-form.scss
+++ b/src/css/class/_search-form.scss
@@ -14,7 +14,7 @@
 
   .query {
     background-color: $color-light-light;
-    border: $width-border-search-form-query solid $color-light-dark;
+    border: $width-border-search-form-query solid $color-border-search-form-query;
     box-sizing: border-box;
     color: $color-dark;
     width: (100% - $width-search-form-button - 1%);
