--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -22,6 +22,10 @@ $color-secondary-light: rgb(251, 254, 0);
 $color-secondary-dark: rgb(255, 171, 0);
 
 
+// Class
+$color-border-search-form-query: $color-light-dark;
+
+
 // Core
 $color-border-blockquote: $color-light-dark;
 $color-fg-blockquote: $color-dark-light;
