Revert "Use serif for body, sans serif for heading"
This reverts commit 00d6b2d1c48071d819d0ca92fc3d9890216456c0.

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -3,7 +3,7 @@
   @import "../../node_modules/hail2u-scss-partials/vendor-extension";
   @include font-feature-settings("kern" 1, "lnum" 1, "pnum" 1);
 
-  font-family: $font-stack-serif;
+  font-family: $font-stack-sans-serif;
   font-size: percentage($ratio-text);
   line-height: $line-height-small;
 
@@ -24,7 +24,6 @@ h1 {
   @extend %heading;
   @extend %link-underline-removal;
 
-  font-family: $font-stack-sans-serif;
   font-size: rem($ratio-text-huge);
   margin: $margin-top-h1 0 $margin;
 }
@@ -137,7 +136,6 @@ figcaption {
   @extend %protrusion;
 
   color: $color-dark-light;
-  font-family: $font-stack-sans-serif;
 
   blockquote + & {
     border-left: $width-border-blockquote solid $color-border-blockquote;
@@ -174,12 +172,15 @@ a {
 }
 
 em {
-  font-family: $font-stack-sans-serif;
+  color: $color-dark-light;
   font-style: normal;
+  font-weight: bolder;
 }
 
 strong {
-  font-weight: bolder;
+  color: $color-secondary-dark;
+  font-weight: normal;
+  padding: $padding-small;
 }
 
 cite {
@@ -273,7 +274,6 @@ td {
 th {
   @extend %table-cell;
 
-  font-family: $font-stack-sans-serif;
   text-align: left;
 
   thead & {
@@ -283,10 +283,6 @@ th {
 
 
 // Forms
-form {
-  font-family: $font-stack-sans-serif;
-}
-
 :-ms-input-placeholder {
   color: inherit;
   opacity: .54;
