--- a/src/css/widget/_seealso.scss
+++ b/src/css/widget/_seealso.scss
@@ -1,12 +1,12 @@
 // Seealso
 .seealso {
   color: $color-dark-light;
-  font-family: $font-stack-sans-serif;
+  font-weight: bolder;
   text-transform: uppercase;
 
   a {
-    font-family: $font-stack-serif;
     font-size: rem($ratio-text-large);
+    font-weight: normal;
     text-transform: none;
   }
 }
