Increase Read Older top white spaces on large screen

--- a/src/css/widget/_read-older.scss
+++ b/src/css/widget/_read-older.scss
@@ -7,22 +7,22 @@
   $r: $ratio-text-huge;
 
   a::before {
-    $m: $margin-huge;
-
     color: $color-dark-light;
     content: "Read older:";
     display: block;
     font-weight: bolder;
     line-height: 1;
     margin-bottom: $margin-tiny;
-    margin-top: $m;
+    margin-top: $margin-huge;
     text-transform: uppercase;
-
-    $margin-top-read-older-label: $m !global;
   }
 
   p {
     font-size: rem($r);
     line-height: $lh;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin-gargantuan;
   }
 }
