Optimize white spaces on bottom of pages
Read Older and Byline should have large top white spaces same as
heading.

--- a/src/css/widget/_read-older.scss
+++ b/src/css/widget/_read-older.scss
@@ -3,9 +3,6 @@
   @extend %positioning-root;
   @extend %link-underline-removal;
 
-  $lh: $line-height-tiny;
-  $r: $ratio-text-huge;
-
   a::before {
     color: $color-dark-light;
     content: "Read older:";
@@ -13,16 +10,12 @@
     font-weight: bolder;
     line-height: 1;
     margin-bottom: $margin-tiny;
-    margin-top: $margin-huge;
+    margin-top: $margin-gargantuan;
     text-transform: uppercase;
   }
 
   p {
-    font-size: rem($r);
-    line-height: $lh;
-  }
-
-  @media (min-width: $breakpoint-full) {
-    margin-top: $margin-gargantuan;
+    font-size: rem($ratio-text-huge);
+    line-height: $line-height-tiny;
   }
 }
