--- a/src/css/widget/_pull-quote.scss
+++ b/src/css/widget/_pull-quote.scss
@@ -34,6 +34,7 @@
     float: left;
     margin-left: (- ($width-supplement + $width-gap-large));
     margin-right: $width-gap;
+    margin-top: $margin-tiny;
     max-width: ($width-supplement + $width-gap-large + $width-supplement / $ratio);
 
     p {
