Add more mark to Topic

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -19,7 +19,7 @@
 
               {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
 
-              <p>{{description}}</p>
+              <p>{{description}} <span class="more">→</span></p>
             </a>
           {{/first}}
         </section>
