--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -30,4 +30,6 @@ $color-border-search-form-query: $color-light-dark;
 $color-border-blockquote: $color-light-dark;
 $color-fg-blockquote: $color-dark-light;
 
+$color-fg-a: $color-primary;
+
 $color-border-table: $color-light-dark;
