--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -30,7 +30,8 @@
           <ol class="post-list">
             {{#item}}
               <li>
-                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+                <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
+                  · <span class="tag"><a href="./blog/{{cat}}/">{{category}}</a></span></div>
                 <a href="{{link}}">{{title}}</a>
               </li>
             {{/item}}
