Add Fat Links widget

--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -12,6 +12,7 @@
 // Widget
 @import "widget/bordered";
 @import "widget/drop";
+@import "widget/fat-links";
 @import "widget/fill";
 @import "widget/flat-list";
 @import "widget/float";
