Use flexbox for Flat List

--- a/src/css/widget/_flat-list.scss
+++ b/src/css/widget/_flat-list.scss
@@ -1,22 +1,14 @@
 // Flat List
 .flat-list {
-  @extend %clearfix;
-  @extend %expander;
-
-  padding-left: (- $margin-side-expander + $padding-left-list);
-
   @media (min-width: $breakpoint-content) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     padding-left: 0;
 
     li {
-      $p: $width-gap-small;
-
-      box-sizing: border-box;
       display: block;
-      float: left;
-      padding-left: $p;
-      padding-right: $p;
-      width: (100% / 3);
+      width: calc((100% - #{$width-gap} * 2) / 3);
     }
   }
 }
