Remove unnecessary variable

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -2,8 +2,6 @@
 .site-search {
   @extend %search-form;
 
-  $m: ($height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2 - $margin);
-
   top: ($margin-top-byline - $margin);
 
   .query {
@@ -30,7 +28,7 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $padding-side-centering;
-    top: ($margin-top-byline + $m);
+    top: ($margin-top-byline + $height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2 - $margin);
     width: percentage(1 / 2);
     z-index: 1;
   }
