Don’t collapse margins before Byline

--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -3,7 +3,7 @@
   @extend %decorative-border;
 
   color: $color-dark-light;
-  margin-top: $margin-top-byline;
+  padding-top: $padding-top-byline;
 
   mark {
     background-color: transparent;
