--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -2,7 +2,7 @@
 .site-search {
   @extend %search-form;
 
-  top: ($margin-top-byline - $margin);
+  top: $padding-top-byline;
 
   .query {
     padding-left: $height-search-form-query;
@@ -28,7 +28,7 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $padding-side-centering;
-    top: ($margin-top-byline + $height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2 - $margin);
+    top: ($padding-top-byline + $height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2);
     width: percentage(1 / 2);
     z-index: 1;
   }
