--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -105,4 +105,4 @@ $height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-h
 
 
 // Global Footer
-$margin-top-byline: $margin-gargantuan;
+$padding-top-byline: $margin-gargantuan;
