--- a/src/css/widget/_topic.scss
+++ b/src/css/widget/_topic.scss
@@ -9,4 +9,14 @@
   .more {
     color: $color-fg-a;
   }
+
+  &::after {
+    color: $color-light-dark;
+    content: "* * *";
+    display: block;
+    font-size: rem($ratio-text-gargantuan);
+    margin-bottom: $margin-huge;
+    margin-top: $margin-huge;
+    text-align: center;
+  }
 }
