Increase whites spaces between Post List item on small screen

--- a/src/css/widget/_post-list.scss
+++ b/src/css/widget/_post-list.scss
@@ -13,7 +13,7 @@
     font-size: rem($r);
     line-height: $lh;
     list-style-type: none;
-    margin-bottom: $margin-small;
+    margin-bottom: $margin;
   }
 
   .info {
@@ -25,6 +25,10 @@
       float: right;
       line-height: ($lh * $r / $ratio-text-footing);
       margin-left: $width-gap-small;
+    }
+
+    li {
+      margin-bottom: $margin-small;
     }
 
     li > a {
