Fix variable name

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -96,7 +96,7 @@ $padding-left-list: $indent;
 
 
 // Global Header
-$line-height-logo: rem($ratio-text-logo * 2);
+$height-logo: rem($ratio-text-logo * 2);
 
 
 // Content
