--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,7 +1,7 @@
 // Site Navigation
 .site-navigation {
   font-size: rem($ratio-text-tiny);
-  line-height: $line-height-logo;
+  line-height: $height-logo;
   position: absolute;
   right: $padding-side-centering;
   text-transform: uppercase;
