Centering Logo vertically on Home

--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -9,6 +9,14 @@
 @import "init";
 
 
+// Global Header
+@import "global-header/logo-is-used-at-home";
+
+
+// Content
+@import "content/first-heading-is-used-at-home";
+
+
 // Widget
 @import "widget/bordered";
 @import "widget/drop";
