--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -10,7 +10,7 @@
         <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}" rel="prerender">
-              <h1 class="first-heading">{{title}}</h1>
+              <h1 class="first-heading is-used-at-home">{{title}}</h1>
 
               <footer class="section-footer">
                 <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
