--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -3,7 +3,8 @@
   color: $color-dark-light;
   font-size: rem($ratio-text-logo);
   font-weight: bolder;
-  line-height: $line-height-logo;
+  height: $height-logo;
+  line-height: $height-logo;
   margin-bottom: 0;
   margin-top: $margin-small;
   text-transform: uppercase;
