Wrap First Heading around Section Footer
This requires markup changes.

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -1,24 +1,23 @@
 // Section Footer
 .section-footer {
   @extend %link-underline-removal;
-  @extend %footing;
 
-  bottom: 100%;
-  position: absolute;
-  width: 100%;
+  $r: $ratio-text-small;
+
+  font-size: rem($r);
+  position: relative;
+  top: $margin-top-h1;
 
   p {
     margin-bottom: 0;
   }
 
-  @media (min-width: $breakpoint-full) {
-    margin-right: 0;
-    right: 0;
-    text-align: right;
-    width: $width-protrusion-full;
+  @media (min-width: $breakpoint-content) {
+    float: right;
+    top: (($height-first-heading-content - rem($r * $line-height)) / 2);
+  }
 
-    p {
-      margin-top: (($height-first-heading-full - $height-footing) / 2);
-    }
+  @media (min-width: $breakpoint-content) {
+    top: (($height-first-heading-full - rem($r * $line-height)) / 2);
   }
 }
