--- a/src/css/global-header/_logo-is-used-at-home.scss
+++ b/src/css/global-header/_logo-is-used-at-home.scss
@@ -1,5 +1,7 @@
 // Logo is Used at Home
 .logo.is-used-at-home {
-  margin-bottom: calc((100vh - #{$height-logo}) / 2 + #{$height-footing});
-  margin-top: calc((100vh - #{$height-logo}) / 2);
+  $m: calc((100vh - #{$height-logo}) / 2);
+
+  margin-bottom: $m;
+  margin-top: $m;
 }
