--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -33,6 +33,7 @@ $ratio-text-logo: $ratio-text;
 
 
 // Content
+$ratio-text-first-heading-content: $ratio-text-huge;
 $ratio-text-first-heading-full: $ratio-text-gargantuan;
 
 
