--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -101,6 +101,7 @@ $height-logo: rem($ratio-text-logo * 2);
 
 // Content
 $line-height-first-heading: $line-height-minimal;
+$height-first-heading-content: rem($line-height-first-heading * $ratio-text-first-heading-content);
 $height-first-heading-full: rem($line-height-first-heading * $ratio-text-first-heading-full);
 
 
