--- a/src/css/content/_first-heading.scss
+++ b/src/css/content/_first-heading.scss
@@ -3,16 +3,13 @@
   font-size: rem($ratio-text-large);
   line-height: $line-height-first-heading;
   margin-bottom: $margin-top-h1;
-  margin-top: ($margin-top-h1 + $height-footing);
 
   @media (min-width: $breakpoint-content) {
-    font-size: rem($ratio-text-huge);
+    font-size: rem($ratio-text-first-heading-content);
   }
 
   @media (min-width: $breakpoint-full) {
     font-size: rem($ratio-text-first-heading-full);
     margin-left: (- ($width-supplement + $width-gap-large));
-    margin-right: $width-protrusion-full;
-    margin-top: $margin-top-h1;
   }
 }
