--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -10,12 +10,12 @@
         <section id="latest-article" class="topic">
           {{#first}}
             <a href="{{link}}" rel="prerender">
-              <h1 class="first-heading is-used-at-home">{{title}}</h1>
-
-              <footer class="section-footer">
+              <footer class="section-footer is-used-at-home">
                 <p><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
                   · <span class="tag">{{category}}</span></p>
               </footer>
+
+              <h1 class="first-heading is-used-at-home">{{title}}</h1>
 
               {{#hasImage}}<figure>{{{image}}}</figure>{{/hasImage}}
 
