Add white spaces between Section Footer and heading

--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -14,6 +14,7 @@
 
   @media (min-width: $breakpoint-content) {
     float: right;
+    margin-left: $width-gap;
     top: (($height-first-heading-content - rem($r * $line-height)) / 2);
   }
 
