Layout Global Header with flexbox

--- a/src/css/_global-header-is-used-at-home.scss
+++ b/src/css/_global-header-is-used-at-home.scss
@@ -1,5 +1,5 @@
-// Logo is Used at Home
-.logo.is-used-at-home {
+// Global Header is Used at Home
+.global-header.is-used-at-home {
   $m: calc((100vh - #{$height-logo}) / 2);
 
   margin-bottom: $m;
