--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -3,4 +3,17 @@
   @extend %centering;
   @extend %link-underline-removal;
   @extend %positioning-root;
+
+  display: flex;
+  margin-top: $margin-small;
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    padding-left: $width-gap-small;
+    margin-top: $margin-large;
+    max-width: $width-full;
+  }
 }
