--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -6,7 +6,7 @@
   height: $height-logo;
   line-height: $height-logo;
   margin-bottom: 0;
-  margin-top: $margin-small;
+  margin-top: 0;
   text-transform: uppercase;
 
   a {
@@ -17,12 +17,7 @@
     background-color: transparent;
   }
 
-  @media (min-width: $breakpoint-content) {
-    margin-top: $margin;
-  }
-
   @media (min-width: $breakpoint-full) {
-    margin-left: (- ($width-supplement + $width-gap-large));
-    margin-top: $margin-large;
+    width: $width-supplement;
   }
 }
