--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,19 +1,24 @@
 // Site Navigation
 .site-navigation {
   font-size: rem($ratio-text-tiny);
+  flex-grow: 1;
   line-height: $height-logo;
-  position: absolute;
-  right: $padding-side-centering;
   text-transform: uppercase;
-  top: 0;
 
   ul {
+    margin-bottom: 0;
     padding-left: 0;
+    display: flex;
   }
 
   li {
-    display: inline;
+    display: block;
     padding-left: $width-gap-tiny;
+    text-align: right;
+
+    &:first-child {
+      flex-grow: 1;
+    }
   }
 
   a {
@@ -37,6 +42,14 @@
   @media (min-width: $breakpoint-full) {
     li {
       padding-left: $width-gap-large;
+
+      &:first-child {
+        flex-grow: 0;
+      }
+
+      &:last-child {
+        flex-grow: 1;
+      }
     }
   }
 }
