--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,5 +1,5 @@
-<header class="global-header" role="banner">
-  {{#home}}<h1 class="logo is-used-at-home"><mark>{{site_title}}</mark></h1>{{/home}}
+<header class="global-header{{#home}} is-used-at-home{{/home}}" role="banner">
+  {{#home}}<h1 class="logo"><mark>{{site_title}}</mark></h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
   <nav class="site-navigation">
