--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -18,7 +18,7 @@
     top: (($height-first-heading-content - rem($r * $line-height)) / 2);
   }
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $breakpoint-full) {
     top: (($height-first-heading-full - rem($r * $line-height)) / 2);
   }
 }
