--- a/src/css/content/_section-footer.scss
+++ b/src/css/content/_section-footer.scss
@@ -3,6 +3,7 @@
   @extend %link-underline-removal;
 
   $r: $ratio-text-small;
+  $h: rem($r * $line-height);
 
   font-size: rem($r);
   position: relative;
@@ -15,10 +16,10 @@
   @media (min-width: $breakpoint-content) {
     float: right;
     margin-left: $width-gap;
-    top: (($height-first-heading-content - rem($r * $line-height)) / 2);
+    top: (($height-first-heading-content - $h) / 2);
   }
 
   @media (min-width: $breakpoint-full) {
-    top: (($height-first-heading-full - rem($r * $line-height)) / 2);
+    top: (($height-first-heading-full - $h) / 2);
   }
 }
