Optimize modifier name

--- a/src/css/_global-header-at-home.scss
+++ b/src/css/_global-header-at-home.scss
@@ -1,5 +1,5 @@
-// Global Header is Used at Home
-.global-header.is-used-at-home {
+// Global Header at Home
+.global-header.at-home {
   $m: calc((100vh - #{$height-logo}) / 2);
 
   margin-bottom: $m;
