--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -10,11 +10,11 @@
 
 
 // Global Header
-@import "global-header-is-used-at-home";
+@import "global-header-at-home";
 
 
 // Content
-@import "content/first-heading-is-used-at-home";
+@import "content/first-heading-at-home";
 
 
 // Widget
