Align Site Navigation on right at Home

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,8 +1,8 @@
 <header class="global-header{{#home}} at-home{{/home}}" role="banner">
-  {{#home}}<h1 class="logo"><mark>{{site_title}}</mark></h1>{{/home}}
+  {{#home}}<h1 class="logo at-home"><mark>{{site_title}}</mark></h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
-  <nav class="site-navigation">
+  <nav class="site-navigation{{#home}} at-home{{/home}}">
     <ul>
       {{#documents}}<li><mark>Documents</mark></li>{{/documents}}
       {{^documents}}<li><a href="/documents/">Documents</a></li>{{/documents}}
