--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -11,6 +11,8 @@
 
 // Global Header
 @import "global-header-at-home";
+@import "global-header/logo-at-home";
+@import "global-header/site-navigation-at-home";
 
 
 // Content
