Layout Post List with flexbox

--- a/src/css/widget/_post-list.scss
+++ b/src/css/widget/_post-list.scss
@@ -4,12 +4,11 @@
 
   $lh: $line-height-tiny;
   $r: $ratio-text-large;
+  $r-info: $ratio-text-small;
 
   padding-left: 0;
 
   li {
-    @extend %positioning-root;
-
     font-size: rem($r);
     line-height: $lh;
     list-style-type: none;
@@ -17,33 +16,28 @@
   }
 
   .info {
-    @extend %footing;
+    color: $color-dark-light;
+    font-size: rem($r-info);
   }
 
   @media (min-width: $breakpoint-content) {
-    .info {
-      float: right;
-      line-height: ($lh * $r / $ratio-text-footing);
-      margin-left: $width-gap-small;
+    li {
+      display: flex;
+      margin-bottom: $margin-small;
+      white-space: nowrap;
     }
 
-    li {
-      margin-bottom: $margin-small;
+    .info {
+      line-height: ($lh * $r / $r-info);
+      margin-left: $width-gap-small;
+      order: 1;
     }
 
     li > a {
       display: block;
+      flex-grow: 1;
       overflow: hidden;
       text-overflow: ellipsis;
-      white-space: nowrap;
-    }
-  }
-
-  @media (min-width: $breakpoint-full) {
-    .info {
-      margin-right: 0;
-      position: static;
-      width: auto;
     }
   }
 }
