Prevent auto space calculation on `flex-grow`

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -1,5 +1,6 @@
 // Site Navigation
 .site-navigation {
+  flex-basis: 0;
   flex-grow: 1;
   font-size: rem($ratio-text-tiny);
   line-height: $height-logo;
@@ -13,6 +14,7 @@
 
   li {
     display: block;
+    flex-basis: 0;
     padding-left: $width-gap-tiny;
     text-align: right;
 
