--- a/src/css/widget/_post-list.scss
+++ b/src/css/widget/_post-list.scss
@@ -35,6 +35,7 @@
 
     li > a {
       display: block;
+      flex-basis: 0;
       flex-grow: 1;
       overflow: hidden;
       text-overflow: ellipsis;
