Layout Share Buttons with flexbox

--- a/src/css/widget/_share-buttons.scss
+++ b/src/css/widget/_share-buttons.scss
@@ -4,26 +4,25 @@
   @extend %protrusion;
 
   ul {
+    display: flex;
     padding-left: 0;
   }
 
   li {
-    display: inline;
-
-    &::before {
-      content: " · ";
-    }
-
-    &:first-child::before {
-      content: "";
-    }
+    display: block;
+    padding-right: $width-gap-small;
   }
 
   @media (min-width: $breakpoint-full) {
     bottom: 0;
 
     ul {
+      justify-content: space-between;
       margin-bottom: 0;
+    }
+
+    li {
+      padding-right: 0;
     }
   }
 }
