Control white spaces with margin

--- a/src/css/widget/_share-buttons.scss
+++ b/src/css/widget/_share-buttons.scss
@@ -10,7 +10,7 @@
 
   li {
     display: block;
-    padding-right: $width-gap-small;
+    margin-right: $width-gap-small;
   }
 
   @media (min-width: $breakpoint-full) {
@@ -22,7 +22,7 @@
     }
 
     li {
-      padding-right: 0;
+      margin-right: 0;
     }
   }
 }
