--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -15,7 +15,7 @@
   li {
     display: block;
     flex-basis: 0;
-    padding-left: $width-gap-tiny;
+    margin-left: $width-gap-tiny;
     text-align: right;
 
     &:first-child {
@@ -37,13 +37,16 @@
     font-size: rem($ratio-text-small);
 
     li {
-      padding-left: $width-gap;
+      margin-left: $width-gap;
     }
   }
 
   @media (min-width: $breakpoint-full) {
+    margin-left: $width-gap-large;
+
     li {
-      padding-left: $width-gap-large;
+      margin-left: 0;
+      margin-right: $width-gap-large;
 
       &:first-child {
         flex-grow: 0;
@@ -51,6 +54,7 @@
 
       &:last-child {
         flex-grow: 1;
+        margin-right: 0;
       }
     }
   }
