Add Hang widget
This widget can hang first heading of each section.

--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -26,6 +26,7 @@
 @import "widget/flat-list";
 @import "widget/float";
 @import "widget/footnote";
+@import "widget/hang";
 @import "widget/post-list";
 @import "widget/pull-quote";
 @import "widget/read-older";
