--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content" role="main">
       <section id="by-year">
-        <h1>公開年別</h1>
+        <h1 class="hang">公開年別</h1>
 
         <ol class="flat-list">
           {{#articles}}
@@ -21,7 +21,7 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}">
-            <h1><time>{{year}}</time></h1>
+            <h1 class="hang"><time>{{year}}</time></h1>
 
             <ol class="post-list">
         {{/isFirstInYear}}
