Add hanged heading to the list of recent articles

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -25,6 +25,8 @@
         </section>
 
         <section id="recent-articles">
+          <h1 class="hang">最近の記事</h1>
+
           <ol class="post-list">
             {{#item}}
               <li>
