--- a/src/css/home.scss
+++ b/src/css/home.scss
@@ -20,6 +20,6 @@
 
 
 // Widget
-@import "widget/hang";
-@import "widget/post-list";
+@import "widget/hanged";
+@import "widget/posts";
 @import "widget/topic";
