--- a/src/css/weblog.scss
+++ b/src/css/weblog.scss
@@ -10,6 +10,6 @@
 
 
 // Widget
-@import "widget/flat-list";
-@import "widget/hang";
-@import "widget/post-list";
+@import "widget/flat";
+@import "widget/hanged";
+@import "widget/posts";
