--- a/src/css/widget/_hanged.scss
+++ b/src/css/widget/_hanged.scss
@@ -1,5 +1,5 @@
-// Hang
-.hang {
+// Hanged
+.hanged {
   @media (min-width: $breakpoint-full) {
     margin-right: $width-gap-large;
     margin-top: 0;
