--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -44,7 +44,7 @@
         <section>
           <h1>製作に使っているツール</h1>
 
-          <ul class="flat-list">
+          <ul class="flat">
             <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
             <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
             <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
@@ -68,7 +68,7 @@
         <section>
           <h1>ウェブサイト上で使っているツール</h1>
 
-          <ul class="flat-list">
+          <ul class="flat">
             <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
           </ul>
         </section>
