--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -7,9 +7,9 @@
 
     <main class="content" role="main">
       <section id="by-year">
-        <h1 class="hang">公開年別</h1>
+        <h1 class="hanged">公開年別</h1>
 
-        <ol class="flat-list">
+        <ol class="flat">
           {{#articles}}
             {{#isFirstInYear}}
               <li><a href="#on-{{year}}"><time>{{year}}</time></a></li>
@@ -21,9 +21,9 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}">
-            <h1 class="hang"><time>{{year}}</time></h1>
+            <h1 class="hanged"><time>{{year}}</time></h1>
 
-            <ol class="post-list">
+            <ol class="posts">
         {{/isFirstInYear}}
 
         <li>
