--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -13,7 +13,7 @@
         <section>
           <h1>$categories::titleについての記事一覧</h1>
 
-          <ol class="post-list">
+          <ol class="posts">
       </?>
 
 <!-- blosxom date -->
