--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -25,9 +25,9 @@
         </section>
 
         <section id="recent-articles">
-          <h1 class="hang">最近の記事</h1>
+          <h1 class="hanged">最近の記事</h1>
 
-          <ol class="post-list">
+          <ol class="posts">
             {{#item}}
               <li>
                 <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time>
