--- a/src/css/style-guide.scss
+++ b/src/css/style-guide.scss
@@ -23,13 +23,12 @@
 @import "widget/bordered";
 @import "widget/drop";
 @import "widget/fill";
-@import "widget/flat-list";
+@import "widget/flat";
 @import "widget/float";
 @import "widget/footnote";
-@import "widget/hang";
-@import "widget/post-list";
+@import "widget/hanged";
+@import "widget/posts";
 @import "widget/pull-quote";
-@import "widget/read-older";
 @import "widget/searchbox";
 @import "widget/seealso";
 @import "widget/sidenote";
