--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -7,17 +7,17 @@
 
     <main class="content" role="main">
       <section id="on-2015">
-        <h1 class="hang"><time>2015</time></h1>
+        <h1 class="hanged"><time>2015</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/democratic-design.html">民主的なデザイン</a></li>
         </ol>
       </section>
 
       <section id="on-2014">
-        <h1 class="hang"><time>2014</time></h1>
+        <h1 class="hanged"><time>2014</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></li>
           <li><a href="/documents/web-typography-best-practices.html">ウェブ・タイポグラフィーのベスト・プラクティス</a></li>
           <li><a href="/documents/bulletproof-icon-fonts.html">安全でアクセシブルなアイコン・フォント</a></li>
@@ -26,9 +26,9 @@
       </section>
 
       <section id="on-2013">
-        <h1 class="hang"><time>2013</time></h1>
+        <h1 class="hanged"><time>2013</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/css-postprocessor-era.html">CSSポストプロセッサー時代の到来</a></li>
           <li><a href="/documents/cutting-down-on-vendor-prefixes.html">ベンダー拡張プリフィックスヲ削減セヨ</a></li>
           <li><a href="/documents/think-of-the-beginners.html">初心者のことを考えよう</a></li>
@@ -40,9 +40,9 @@
       </section>
 
       <section id="on-2012">
-        <h1 class="hang"><time>2012</time></h1>
+        <h1 class="hanged"><time>2012</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/style-repository.html">スタイル・リポジトリ</a></li>
           <li><a href="/documents/rdfa-lite-20120607.html">抄訳 RDFa Lite 1.1</a></li>
           <li><a href="/documents/learn-you-a-flexbox-for-great-good.html">Flexbox、おもしろいですよ？</a></li>
@@ -50,9 +50,9 @@
       </section>
 
       <section id="on-2011">
-        <h1 class="hang"><time>2011</time></h1>
+        <h1 class="hanged"><time>2011</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/ala-getting-started-with-sass.html">Sassで行こう！</a></li>
           <li><a href="/documents/ala-whitespace.html">余白の美</a></li>
           <li><a href="/documents/sass-tutorial.html">Sass - チュートリアル</a></li>
@@ -62,9 +62,9 @@
       </section>
 
       <section id="on-2009">
-        <h1 class="hang"><time>2009</time></h1>
+        <h1 class="hanged"><time>2009</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/adding-meaning-to-your-http-error-pages.html">HTTPエラーページに意味を持たせよう</a></li>
           <li><a href="/documents/git-cheat-sheets-jp.html">Git Cheat Sheets JP</a></li>
           <li><a href="/documents/version-control-for-designers.html">Version Control for Designers</a></li>
@@ -72,17 +72,17 @@
       </section>
 
       <section id="on-2008">
-        <h1 class="hang"><time>2008</time></h1>
+        <h1 class="hanged"><time>2008</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/sortable-pokemon-list.html">ソート機能付き ポケモン一覧表</a></li>
         </ol>
       </section>
 
       <section id="upto-2007">
-        <h1 class="hang">～ <time>2007</time></h1>
+        <h1 class="hanged">～ <time>2007</time></h1>
 
-        <ol class="post-list">
+        <ol class="posts">
           <li><a href="/documents/216colors.html">216 cross platform colors table</a></li>
           <li><a href="/documents/about-rss.html">RSSについて</a></li>
           <li><a href="/documents/atom02spec.html">Atom 0.2 Spec日本語 HTML 版</a></li>
