--- a/src/html/partial/meta.mustache
+++ b/src/html/partial/meta.mustache
@@ -1,10 +1,4 @@
 <meta charset="UTF-8">
 <meta content="width=device-width" name="viewport">
-
-{{#weblog_child}}
-  <?$permalink::is_permalink ne="1"><meta content="{{description}}$categories::description" name="description"></?>
-  <?$permalink::is_permalink eq="1"><meta content="$permalink::description" name="description"></?>
-  <meta content="blosxom v$version" name="generator">
-{{/weblog_child}}
-
-{{^weblog_child}}<meta content="{{description}}" name="description">{{/weblog_child}}
+<meta content="{{description}}" name="description">
+<meta content="blosxom v$version" name="generator">
