--- a/src/html/partial/meta.mustache
+++ b/src/html/partial/meta.mustache
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
 <meta content="width=device-width" name="viewport">
 <meta content="{{description}}" name="description">
-<meta content="blosxom v$version" name="generator">
+{{#weblog_child}}<meta content="blosxom v$version" name="generator">{{/weblog_child}}
