Insert metadata for social networks

--- a/src/html/partial/social.mustache
+++ b/src/html/partial/social.mustache
@@ -1,11 +1,9 @@
+<meta content="{{card_type}}" name="twitter:card">
+<meta content="{{twitter_username}}" name="twitter:site">
 <meta content="{{canonical}}" property="og:url">
-{{#home}}<meta content="{{site_title}}" property="og:title">{{/home}}
-{{^home}}<meta content="{{short_title}}" property="og:title">{{/home}}
+<meta content="{{short_title}}" property="og:title">
 <meta content="{{description}}" property="og:description">
 <meta content="{{site_title}}" property="og:site_name">
 <meta content="{{cover}}" property="og:image">
-{{#type}}<meta content="{{.}}" property="og:type">{{/type}}
+<meta content="{{type}}" property="og:type">
 <meta content="{{lang}}" property="og:locale">
-
-<meta content="{{card_type}}" name="twitter:card">
-<meta content="{{twitter_username}}" name="twitter:site">
