Use absolute URL for og:image

--- a/src/html/partial/social.mustache
+++ b/src/html/partial/social.mustache
@@ -4,6 +4,6 @@
 <meta content="{{short_title}}" property="og:title">
 <meta content="{{description}}" property="og:description">
 <meta content="{{site_title}}" property="og:site_name">
-<meta content="{{cover}}" property="og:image">
+<meta content="{{scheme}}//{{domain}}{{cover}}" property="og:image">
 <meta content="{{type}}" property="og:type">
 <meta content="{{lang}}" property="og:locale">
