Configure locale with a lang and region

--- a/src/html/partial/social.mustache
+++ b/src/html/partial/social.mustache
@@ -6,4 +6,4 @@
 <meta content="{{site_title}}" property="og:site_name">
 <meta content="{{scheme}}//{{domain}}{{cover}}" property="og:image">
 <meta content="{{type}}" property="og:type">
-<meta content="{{lang}}" property="og:locale">
+<meta content="{{lang}}_{{region}}" property="og:locale">
