Use bold for marking active

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -29,8 +29,7 @@
 
   mark {
     background-color: transparent;
-    border-bottom: $width-border solid $color-primary-light;
-    padding-bottom: $padding-small;
+    font-weight: bolder;
   }
 
   @media (min-width: $breakpoint-content) {
