Fill img background with lightest color

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -233,7 +233,7 @@ video {
   max-width: 100%;
 
   figure & {
-    background-color: $color-secondary;
+    background-color: $color-light-light;
     vertical-align: bottom;
   }
 }
