Use absolute URL for og:url

--- a/src/html/partial/social.mustache
+++ b/src/html/partial/social.mustache
@@ -1,6 +1,6 @@
 <meta content="{{card_type}}" name="twitter:card">
 <meta content="{{twitter_username}}" name="twitter:site">
-<meta content="{{canonical}}" property="og:url">
+<meta content="{{scheme}}//{{domain}}{{canonical}}" property="og:url">
 <meta content="{{short_title}}" property="og:title">
 <meta content="{{description}}" property="og:description">
 <meta content="{{site_title}}" property="og:site_name">
