Add long summary to Weblog and Documents

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -11,7 +11,11 @@
     <main class="content" role="main">
       <?$categories::enabled eq="1">
         <section>
-          <h1>$categories::titleについての記事一覧</h1>
+          <h1 class="first-heading">{{short_title}}</h1>
+
+          <p>以下は2002年より始まったこのウェブログの$categories::titleに関する記事だけの時系列順のリストになります。</p>
+
+          <hr>
 
           <ol class="posts">
       </?>
