--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -6,6 +6,12 @@
     {{> global-header}}
 
     <main class="content" role="main">
+      <section>
+        <h1 class="first-heading">{{short_title}}</h1>
+
+        <p>2003年ごろより、独立した形で参照してもらいたい文書やチュートリアルを書き、公開しています。他に翻訳や様々なデータの表なども作成しています。以下はそれらの一覧になります。</p>
+      </section>
+
       <section id="on-2015">
         <h1 class="hanged"><time>2015</time></h1>
 
