--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -6,6 +6,12 @@
     {{> global-header}}
 
     <main class="content" role="main">
+      <section>
+        <h1 class="first-heading">{{short_title}}</h1>
+
+        <p>2002年よりウェブログを始めました。当初よりウェブサイト制作に関する話題が中心になっていますが、なるべく日々の行動とその結果についての考察を連続して記録することを心がけています。2500記事以上になるそれらをここに時系列順で並べました。</p>
+      </section>
+
       <section id="by-year">
         <h1 class="hanged">公開年別</h1>
 
