Place Site Search button right

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -6,7 +6,7 @@
   top: $padding-top-byline;
 
   .query {
-    padding-left: $height-search-form-query;
+    padding-right: $height-search-form-query;
     width: 100%;
   }
 
@@ -18,10 +18,10 @@
     background-size: 50%;
     box-sizing: border-box;
     height: $height-search-form-query;
-    left: 0;
     padding-left: $height-search-form-query;
     padding-right: 0;
     position: absolute;
+    right: 0;
     top: 0;
     width: $height-search-form-query;
   }
