Optimize Site Search width

--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -30,11 +30,7 @@
     position: absolute;
     right: $padding-side-centering;
     top: ($padding-top-byline + $height-decorative-border + (rem($line-height-root-content * $ratio-text-global-footer) - $height-search-form-query) / 2);
-    width: percentage(1 / 2);
+    width: $width-supplement;
     z-index: 1;
-  }
-
-  @media (min-width: $breakpoint-full) {
-    width: percentage(1 / 3);
   }
 }
