--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -5,7 +5,7 @@
 
   font-family: $font-stack-sans-serif;
   font-size: percentage($ratio-text);
-  line-height: $line-height-small;
+  line-height: $line-height-root;
 
   @media (min-width: $breakpoint-content) {
     line-height: $line-height-root-content;
