--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -85,6 +85,7 @@ $height-footing: rem($line-height-footing * $ratio-text-footing);
 
 
 // Core
+$line-height-root: $line-height-small;
 $line-height-root-content: $line-height;
 
 $margin-top-h1: $margin-gargantuan;
