--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -1,3 +1,5 @@
 <footer class="global-footer" role="contentinfo">
   <p class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a></p>
+
+  <p class="footlinks"><a href="{{license_url}}" rel="license">CC BY-NC</a> • <a href="{{feed_url}}" rel="alternate">RSS</a></p>
 </footer>
