--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -29,6 +29,7 @@
 // Global Footer
 @import "global-footer";
 @import "global-footer/byline";
+@import "global-footer/footlinks";
 
 
 // Subcontent
